Fix auto-detected code issues